PA2/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | COMPLEX
   8       | VOID
   9       | BOOL
  10       | STRING
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | DoStmt ';'
  31       | IfStmt
  32       | WhileStmt
  33       | ForStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | PrintCompStmt ';'
  37       | BreakStmt ';'
  38       | StmtBlock

  39  SimpleStmt : LValue '=' Expr
  40             | Call
  41             |

  42  Receiver : Expr '.'
  43           |

  44  LValue : Receiver IDENTIFIER
  45         | Expr '[' Expr ']'

  46  Call : Receiver IDENTIFIER '(' Actuals ')'

  47  ACaseExpr : Constant ':' Expr ';'

  48  DefaultExpr : DEFAULT ':' Expr ';'

  49  ACaseExprList : ACaseExprList ACaseExpr
  50                |

  51  Expr : LValue
  52       | Call
  53       | Constant
  54       | CASE '(' Expr ')' '{' ACaseExprList DefaultExpr '}'
  55       | Expr '+' Expr
  56       | Expr '-' Expr
  57       | Expr '*' Expr
  58       | Expr '/' Expr
  59       | Expr '%' Expr
  60       | Expr EQUAL Expr
  61       | Expr NOT_EQUAL Expr
  62       | Expr '<' Expr
  63       | Expr '>' Expr
  64       | Expr LESS_EQUAL Expr
  65       | Expr GREATER_EQUAL Expr
  66       | Expr AND Expr
  67       | Expr OR Expr
  68       | '(' Expr ')'
  69       | '-' Expr
  70       | '!' Expr
  71       | '@' Expr
  72       | '$' Expr
  73       | '#' Expr
  74       | READ_INTEGER '(' ')'
  75       | READ_LINE '(' ')'
  76       | THIS
  77       | SUPER
  78       | DCOPY '(' Expr ')'
  79       | SCOPY '(' Expr ')'
  80       | NEW IDENTIFIER '(' ')'
  81       | NEW Type '[' Expr ']'
  82       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  83       | '(' CLASS IDENTIFIER ')' Expr

  84  Constant : LITERAL
  85           | NULL

  86  Actuals : ExprList
  87          |

  88  ExprList : ExprList ',' Expr
  89           | Expr

  90  DoBranch : Expr ':' Stmt

  91  DoBranchList : DoBranchList SPLIT DoBranch
  92               | DoBranch

  93  DoStmt : DO DoBranchList OD

  94  WhileStmt : WHILE '(' Expr ')' Stmt

  95  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  96  BreakStmt : BREAK

  97  IfStmt : IF '(' Expr ')' Stmt ElseClause

  98  ElseClause : ELSE Stmt
  99             |

 100  ReturnStmt : RETURN Expr
 101             | RETURN

 102  PrintStmt : PRINT '(' ExprList ')'

 103  PrintCompStmt : PRINTCOMP '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	COMPLEX  shift 12
	VOID  shift 13
	BOOL  shift 14
	INT  shift 15
	STRING  shift 16
	CLASS  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : COMPLEX .  (7)

	.  reduce 7


state 13
	Type : VOID .  (8)

	.  reduce 8


state 14
	Type : BOOL .  (9)

	.  reduce 9


state 15
	Type : INT .  (6)

	.  reduce 6


state 16
	Type : STRING .  (10)

	.  reduce 10


state 17
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 18
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	COMPLEX  shift 12
	VOID  shift 13
	BOOL  shift 14
	INT  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Type  goto 25


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	COMPLEX  shift 12
	VOID  shift 13
	BOOL  shift 14
	INT  shift 15
	STRING  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	COMPLEX  shift 12
	VOID  shift 13
	BOOL  shift 14
	INT  shift 15
	STRING  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	COMPLEX  shift 12
	VOID  shift 13
	BOOL  shift 14
	INT  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (41)
	Receiver : .  (43)

	COMPLEX  shift 12
	PRINTCOMP  shift 47
	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	VOID  shift 13
	BOOL  shift 14
	INT  shift 15
	STRING  shift 16
	CLASS  shift 17
	DO  shift 55
	NULL  shift 56
	THIS  shift 57
	WHILE  shift 58
	FOR  shift 59
	IF  shift 60
	RETURN  shift 61
	BREAK  shift 62
	NEW  shift 63
	PRINT  shift 64
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'{'  shift 42
	'}'  shift 72
	IDENTIFIER  reduce 43
	';'  reduce 41

	VariableDef  goto 73
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	DoStmt  goto 77
	IfStmt  goto 78
	WhileStmt  goto 79
	ForStmt  goto 80
	ReturnStmt  goto 81
	PrintStmt  goto 82
	PrintCompStmt  goto 83
	BreakStmt  goto 84
	LValue  goto 85
	Expr  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 47
	PrintCompStmt : PRINTCOMP . '(' ExprList ')'  (103)

	'('  shift 90
	.  error


state 48
	Expr : '@' . Expr  (71)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 92
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 49
	Expr : '$' . Expr  (72)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 94
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 50
	Expr : '#' . Expr  (73)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 95
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 51
	Expr : CASE . '(' Expr ')' '{' ACaseExprList DefaultExpr '}'  (54)

	'('  shift 96
	.  error


state 52
	Expr : SUPER .  (77)

	.  reduce 77


state 53
	Expr : DCOPY . '(' Expr ')'  (78)

	'('  shift 97
	.  error


state 54
	Expr : SCOPY . '(' Expr ')'  (79)

	'('  shift 98
	.  error


state 55
	DoStmt : DO . DoBranchList OD  (93)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 99
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89
	DoBranch  goto 100
	DoBranchList  goto 101


state 56
	Constant : NULL .  (85)

	.  reduce 85


state 57
	Expr : THIS .  (76)

	.  reduce 76


state 58
	WhileStmt : WHILE . '(' Expr ')' Stmt  (94)

	'('  shift 102
	.  error


state 59
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (95)

	'('  shift 103
	.  error


state 60
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (97)

	'('  shift 104
	.  error


state 61
	ReturnStmt : RETURN . Expr  (100)
	ReturnStmt : RETURN .  (101)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43
	';'  reduce 101

	LValue  goto 91
	Expr  goto 105
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 62
	BreakStmt : BREAK .  (96)

	.  reduce 96


state 63
	Expr : NEW . IDENTIFIER '(' ')'  (80)
	Expr : NEW . Type '[' Expr ']'  (81)

	COMPLEX  shift 12
	VOID  shift 13
	BOOL  shift 14
	INT  shift 15
	STRING  shift 16
	CLASS  shift 17
	IDENTIFIER  shift 106
	.  error

	Type  goto 107


state 64
	PrintStmt : PRINT . '(' ExprList ')'  (102)

	'('  shift 108
	.  error


state 65
	Expr : READ_INTEGER . '(' ')'  (74)

	'('  shift 109
	.  error


state 66
	Expr : READ_LINE . '(' ')'  (75)

	'('  shift 110
	.  error


state 67
	Constant : LITERAL .  (84)

	.  reduce 84


state 68
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (82)

	'('  shift 111
	.  error


state 69
	Expr : '-' . Expr  (69)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 112
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 70
	Expr : '!' . Expr  (70)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 113
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 71
	Expr : '(' . Expr ')'  (68)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (83)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	CLASS  shift 114
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 115
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 72
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 73
	Stmt : VariableDef .  (28)

	.  reduce 28


state 74
	Stmt : StmtBlock .  (38)

	.  reduce 38


state 75
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 76
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 116
	.  error


state 77
	Stmt : DoStmt . ';'  (30)

	';'  shift 117
	.  error


state 78
	Stmt : IfStmt .  (31)

	.  reduce 31


state 79
	Stmt : WhileStmt .  (32)

	.  reduce 32


state 80
	Stmt : ForStmt .  (33)

	.  reduce 33


state 81
	Stmt : ReturnStmt . ';'  (34)

	';'  shift 118
	.  error


state 82
	Stmt : PrintStmt . ';'  (35)

	';'  shift 119
	.  error


state 83
	Stmt : PrintCompStmt . ';'  (36)

	';'  shift 120
	.  error


state 84
	Stmt : BreakStmt . ';'  (37)

	';'  shift 121
	.  error


state 85
	SimpleStmt : LValue . '=' Expr  (39)
	Expr : LValue .  (51)

	'='  shift 122
	AND  reduce 51
	OR  reduce 51
	LESS_EQUAL  reduce 51
	GREATER_EQUAL  reduce 51
	EQUAL  reduce 51
	NOT_EQUAL  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	'%'  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	'.'  reduce 51
	'['  reduce 51


state 86
	Receiver : Expr . '.'  (42)
	LValue : Expr . '[' Expr ']'  (45)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)

	AND  shift 123
	OR  shift 124
	LESS_EQUAL  shift 125
	GREATER_EQUAL  shift 126
	EQUAL  shift 127
	NOT_EQUAL  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'>'  shift 134
	'<'  shift 135
	'.'  shift 136
	'['  shift 137
	.  error


state 87
	SimpleStmt : Call .  (40)
	Expr : Call .  (52)

	AND  reduce 52
	OR  reduce 52
	LESS_EQUAL  reduce 52
	GREATER_EQUAL  reduce 52
	EQUAL  reduce 52
	NOT_EQUAL  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'%'  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'.'  reduce 52
	';'  reduce 40
	')'  reduce 40
	'['  reduce 52


state 88
	LValue : Receiver . IDENTIFIER  (44)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (46)

	IDENTIFIER  shift 138
	.  error


state 89
	Expr : Constant .  (53)

	.  reduce 53


state 90
	PrintCompStmt : PRINTCOMP '(' . ExprList ')'  (103)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 139
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89
	ExprList  goto 140


state 91
	Expr : LValue .  (51)

	.  reduce 51


state 92
	Receiver : Expr . '.'  (42)
	LValue : Expr . '[' Expr ']'  (45)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)
	Expr : '@' Expr .  (71)

	.  reduce 71


state 93
	Expr : Call .  (52)

	.  reduce 52


state 94
	Receiver : Expr . '.'  (42)
	LValue : Expr . '[' Expr ']'  (45)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)
	Expr : '$' Expr .  (72)

	.  reduce 72


state 95
	Receiver : Expr . '.'  (42)
	LValue : Expr . '[' Expr ']'  (45)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)
	Expr : '#' Expr .  (73)

	.  reduce 73


state 96
	Expr : CASE '(' . Expr ')' '{' ACaseExprList DefaultExpr '}'  (54)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 141
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 97
	Expr : DCOPY '(' . Expr ')'  (78)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 142
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 98
	Expr : SCOPY '(' . Expr ')'  (79)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 143
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 99
	Receiver : Expr . '.'  (42)
	LValue : Expr . '[' Expr ']'  (45)
	Expr : Expr . '+' Expr  (55)
	Expr : Expr . '-' Expr  (56)
	Expr : Expr . '*' Expr  (57)
	Expr : Expr . '/' Expr  (58)
	Expr : Expr . '%' Expr  (59)
	Expr : Expr . EQUAL Expr  (60)
	Expr : Expr . NOT_EQUAL Expr  (61)
	Expr : Expr . '<' Expr  (62)
	Expr : Expr . '>' Expr  (63)
	Expr : Expr . LESS_EQUAL Expr  (64)
	Expr : Expr . GREATER_EQUAL Expr  (65)
	Expr : Expr . AND Expr  (66)
	Expr : Expr . OR Expr  (67)
	DoBranch : Expr . ':' Stmt  (90)

	AND  shift 123
	OR  shift 124
	LESS_EQUAL  shift 125
	GREATER_EQUAL  shift 126
	EQUAL  shift 127
	NOT_EQUAL  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'>'  shift 134
	'<'  shift 135
	'.'  shift 136
	'['  shift 137
	':'  shift 144
	.  error


state 100
	DoBranchList : DoBranch .  (92)

	.  reduce 92


state 101
	DoBranchList : DoBranchList . SPLIT DoBranch  (91)
	DoStmt : DO DoBranchList . OD  (93)

	SPLIT  shift 145
	OD  shift 146
	.  error


state 102
	WhileStmt : WHILE '(' . Expr ')' Stmt  (94)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 147
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89


state 103
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (95)
	SimpleStmt : .  (41)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43
	';'  reduce 41

	SimpleStmt  goto 148
	LValue  goto 85
	Expr  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 104
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (97)
	Receiver : .  (43)

	'@'  shift 48
	'$'  shift 49
	'#'  shift 50
	CASE  shift 51
	SUPER  shift 52
	DCOPY  shift 53
	SCOPY  shift 54
	NULL  shift 56
	THIS  shift 57
	NEW  shift 63
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 91
	Expr  goto 149
	Call  goto 93
	Receiver  goto 88
	Constant  goto 89

